# elschool_bot

./: .gitignore  bot.db  pyproject.toml
db/: add_schedule.py  add_schedule_changes.py  add_schedule_notifications.py  add_show_without_marks.py  create.py  save_class_ids.py
elschool_bot/: __init__.py  __main__.py  repository.py
elschool_bot/dialogs/: __init__.py  date_selector.py  help.py  input_data.py  results_grades.py
elschool_bot/dialogs/grades/: __init__.py  data_getter.py  show.py
elschool_bot/dialogs/notifications/: __init__.py  autosending.py  scheduler.py
elschool_bot/dialogs/schedule/: __init__.py  edit.py
elschool_bot/dialogs/scheduler/: __init__.py  scheduler.py
elschool_bot/dialogs/settings/: __init__.py  change_data.py  register.py  remove_data.py
elschool_bot/dialogs/settings/change_data/: __init__.py  all.py  one.py
elschool_bot/repository/: __init__.py  base.py  diaries.py  elschool_api.py  grades.py  notifications.py  random_api.py  repo.py  users.py
elschool_bot/widgets/: grades_select.py  range_calendar.py  ru_calendar.py  ru_range_calendar.py
elschool_bot/windows/: select_lessons.py  status.py
