[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "elschool_bot"
version = "3.3.0.dev12"
description = "бот для телегамма котрый показывает оценки из elschool и помогает учиться"
dependencies = [
    "aiogram>=3.0.0",
    "aiogram-dialog>=2.0.0",
    "beautifulsoup4",
    "aiohttp",
    "aiosqlite"
]

[project.scripts]
elschool = "elschool_bot:main"